# tauri-plugin-buttonkit

./: Cargo.toml  README.md  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: ButtonkitPlugin.kt  Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: buttonkit.js
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
